--- a/UsingLeapMotion/Packages/manifest.json
+++ b/UsingLeapMotion/Packages/manifest.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "com.ultraleap.tracking": "6.14.0",
+    "com.unity.barracuda": "1.0.4",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.scripting.python": "6.0.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
@@ -37,8 +39,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.barracuda": "1.0.4"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
