--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 UsingLeapMotion/model_simple_save.h5
+UsingLeapMotion/Assets/Models/model_simple_save.h5
+UsingLeapMotion/Assets/Models/model_simple_save.h5.meta
