--- a/UsingLeapMotion/Packages/manifest.json
+++ b/UsingLeapMotion/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.ultraleap.tracking": "6.14.0",
     "com.unity.barracuda": "1.0.4",
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.scripting.python": "6.0.1",
     "com.unity.textmeshpro": "3.0.6",
